--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "markdown-it": "^12.2.0",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.1.0",
+    "react-markdown-editor-lite": "^1.3.1",
+    "react-syntax-highlighter": "^15.4.4",
+    "react-toastify": "^8.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "7.32.0",
