--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "markdown-it": "^12.2.0",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.0",
     "react-markdown-editor-lite": "^1.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.1",
     "react-syntax-highlighter": "^15.4.4",
     "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
