--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.0.0-rc.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
@@ -25,6 +26,8 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
