--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.0.6",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "react-toastify": "^8.1.0",
