--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "sharp": "^0.29.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
