--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
-    "next": "12.0.3",
+    "next": "^12.0.7",
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
