--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "next": "^12.0.7",
     "prism-react-renderer": "^1.2.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
